tests/ui/derives/deriving-meta-unknown-trait.stderr
error: cannot find derive macro `Eqr` in this scope
  --> $DIR/deriving-meta-unknown-trait.rs:1:10
   |
LL | #[derive(Eqr)]
   |          ^^^
   |
  --> $SRC_DIR/core/src/cmp.rs:LL:COL
   |
   = note: similarly named derive macro `Eq` defined here
help: a derive macro with a similar name exists
   |
LL - #[derive(Eqr)]
LL + #[derive(Eq)]
   |

error: cannot find derive macro `Eqr` in this scope
  --> $DIR/deriving-meta-unknown-trait.rs:1:10
   |
LL | #[derive(Eqr)]
   |          ^^^
   |
  --> $SRC_DIR/core/src/cmp.rs:LL:COL
   |
   = note: similarly named derive macro `Eq` defined here
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: a derive macro with a similar name exists
   |
LL - #[derive(Eqr)]
LL + #[derive(Eq)]
   |

error: aborting due to 2 previous errors

